@@ -18,12 +18,19 @@ if __FILE__ == $PROGRAM_NAME
 
   fonts = [
     LoadFontEx("jpfont/GenShinGothic-Normal.ttf", 20, nil, 65535),
-    LoadFontEx("jpfont/x12y16pxMaruMonica.ttf", 19, nil, 65535),
+    LoadFontEx("jpfont/x12y16pxMaruMonica.ttf", 16, nil, 65535),
   ]
+
   font_names = [
     "源真ゴシック",
     "マルモニカ",
   ]
+
+  SetTextureFilter(fonts[0][:texture], TEXTURE_FILTER_BILINEAR) # 源真ゴシック
+  SetTextureFilter(fonts[1][:texture], TEXTURE_FILTER_POINT)    # マルモニカ
+
+  # fonts.each { |font| GenTextureMipmaps(font[:texture].pointer) }
+
   NUM_FONTS = fonts.length
   current_font = 0
 
@@ -39,9 +46,9 @@ if __FILE__ == $PROGRAM_NAME
       end
       DrawTextEx(fonts[current_font], msg.join, Vector2.create(20.0, 50.0), fonts[current_font][:baseSize].to_f, 1.2, DARKGREEN)
 
-      DrawRectangle(650, 400, 120, 25, Fade(SKYBLUE, 0.5))
-      DrawRectangleLines(650, 400, 120, 25, Fade(DARKBLUE, 0.5))
-      DrawTextEx(fonts[current_font], "Font : #{font_names[current_font]}", Vector2.create(660, 405), 15.0, 1.0, BLUE)
+      DrawRectangle(650, 400, 125, 25, Fade(SKYBLUE, 0.5))
+      DrawRectangleLines(650, 400, 125, 25, Fade(DARKBLUE, 0.5))
+      DrawTextEx(fonts[current_font], "Font : #{font_names[current_font]}", Vector2.create(660, 405), 16.0, 1.0, BLUE)
     EndDrawing()
   end
 
